--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ape-installing",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ape framework module for installing modules.",
   "main": "lib",
   "scripts": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "argx": "^1.3.0",
     "async": "^1.4.2",
+    "colorprint": "^2.0.4",
     "execcli": "^2.2.4",
     "hasbin": "^1.1.2"
   },
