--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "ape-installing",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "ape framework module for installing modules.",
   "main": "lib",
   "scripts": {
     "test": "./ci/test.js"
   },
   "repository": "ape-repo/ape-installing",
-  "keywords": [],
+  "keywords": [
+    "ape",
+    "installing"
+  ],
   "author": {
-    "name": "okunishinishi",
+    "name": "Taka Okunishi",
     "email": "okunishitaka.com@gmail.com",
     "url": "http://okunishitaka.com"
   },
@@ -19,23 +22,26 @@
   },
   "homepage": "https://github.com/ape-repo/ape-installing#readme",
   "dependencies": {
-    "argx": "^1.3.0",
-    "async": "^1.4.2",
-    "colorprint": "^2.0.4",
-    "execcli": "^2.2.4",
-    "hasbin": "^1.1.2"
+    "ape-tmpl": "^2.0.10",
+    "argx": "^2.0.1",
+    "async": "^1.5.2",
+    "colorprint": "^3.0.2",
+    "execcli": "^3.0.1",
+    "hasbin": "^1.2.1"
   },
   "devDependencies": {
-    "ape-covering": "^1.0.8",
-    "ape-releasing": "^1.0.16",
-    "ape-reporting": "^1.0.9",
-    "ape-tasking": "^1.0.7",
-    "ape-testing": "^1.3.2",
-    "ape-tmpl": "^1.3.6",
-    "ape-updating": "^1.1.0",
-    "coz": "^3.1.2",
-    "coz-tmpl": "^1.1.0",
+    "ape-covering": "^2.0.2",
+    "ape-releasing": "^2.0.1",
+    "ape-reporting": "^2.0.3",
+    "ape-tasking": "^2.0.2",
+    "ape-testing": "^2.0.1",
+    "ape-tmpl": "^2.0.10",
+    "ape-updating": "^2.0.3",
+    "coz": "^4.0.3",
     "injectmock": "^1.1.3",
     "sharegit": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   }
 }
